--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/telescope": "^4.8",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "livewire/livewire": "^2.12",
         "munafio/chatify": "^1.3",
         "pusher/pusher-php-server": "^7.0",
         "realrashid/sweet-alert": "^7.1"
