--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^1.6.8",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
-        "vue-loader": "^15.9.7",
+        "vue": "^3.2.13",
+        "vue-loader": "^17.4.2",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@vue/compiler-sfc": "^3.4.21"
     }
 }
