--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "axios": "^1.6.8",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.3.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "@vue/compiler-sfc": "^3.4.21"
+        "@vue/compiler-sfc": "^3.4.21",
+        "popper.js": "^1.16.1"
     }
 }
