--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "livewire/livewire": "^2.12",
+        "php-open-source-saver/jwt-auth": "^2.2",
         "pusher/pusher-php-server": "^7.0",
         "realrashid/sweet-alert": "^7.1"
     },
